Finished Server part and started Client